cmake_minimum_required(VERSION 3.20)


project(test_lib)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}/bin)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
set(
    LIB_HEADERS
    framework.h
    )
        
    
set(
    LIB_SRCS
    dllmain.cpp
    )


add_library(called SHARED  ${LIB_HEADERS} ${LIB_SRCS} )
target_compile_definitions(called PRIVATE TEST_EXPORTS)
target_include_directories(called INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")


set(
    EXE_SRCS
    main.cpp
    )


add_executable(caller ${EXE_SRCS} )
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT caller)
target_link_libraries(caller PRIVATE called)

